# conjudate-poc

./: .gitignore  Cargo.toml  README.md
poc/: Cargo.toml
poc/src/: lib.rs
pocjsonrpc/: Cargo.toml
pocjsonrpc/src/: lib.rs
pocjsonrpc/test/: Cargo.toml  main.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
rewards/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: difficulty.rs  lib.rs
src/: chain_spec.rs  cli.rs  main.rs  service.rs
