[package]
name = "conjugatepoc"
version = "0.1.0"
authors = ["Tom<tom2020@gmail.com>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "conjugatepoc"
path = "src/main.rs"

[dependencies]
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"
derive_more = "0.14.0"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sr-io = { path = "vendor/substrate/core/sr-io" }
substrate-cli = { path = "vendor/substrate/core/cli" }
primitives = { package = "substrate-primitives", path = "vendor/substrate/core/primitives" }
substrate-executor = { path = "vendor/substrate/core/executor" }
substrate-service = { path = "vendor/substrate/core/service" }
inherents = { package = "substrate-inherents", path = "vendor/substrate/core/inherents" }
transaction-pool = { package = "substrate-transaction-pool", path = "vendor/substrate/core/transaction-pool" }
network = { package = "substrate-network", path = "vendor/substrate/core/network" }
substrate-client = { path = "vendor/substrate/core/client" }
basic-authorship = { package = "substrate-basic-authorship", path = "vendor/substrate/core/basic-authorship" }
conjugatepoc-runtime = { path = "runtime" }
conjugatepoc-primitives = { path = "primitives" }
consensus-poc = { package = "substrate-consensus-poc", path = "vendor/substrate/core/consensus/poc" }
conjugatepoc-poc = { path = "poc" }
srml-timestamp = { path = "vendor/substrate/srml/timestamp" }
srml-system = { path = "vendor/substrate/srml/system" }
srml-anyupgrade = { path = "anyupgrade" }
srml-rewards = { path = "rewards" }
structopt = "0.2"
consensus-common = { package = "substrate-consensus-common", path = "vendor/substrate/core/consensus/common" }

[build-dependencies]
vergen = "3"

[workspace]
members = [
	"runtime",
	"poc",
	"anyupgrade",
	"rewards",
   	"pocjsonrpc",
]
exclude = ["vendor"]
