[package]
name = "pocjsonrpc"
version = "0.1.0"
authors = ["IPSE-TEAM <silver@engine.gold>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12.35"
futures = "0.1.29"
serde_json = "1.0.41"
http = "0.1.19"
serde = { version = "1.0.101", features = ["derive"] }
chrono = { version = "0.4.9", features = ["serde"] }
rand = "*" 