[package]
name = "conjugatepoc-primitives"
version = "0.1.0"
authors = ["Tom <tom2020@gmail.com>"]
edition = "2018"

[dependencies]
poc-primitives = { package = "substrate-consensus-poc-primitives", path = "../vendor/substrate/core/consensus/poc/primitives", default-features = false }
substrate-primitives = { path = "../vendor/substrate/core/primitives", default-features = false }
substrate-client = { path = "../vendor/substrate/core/client", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = ["std"]
std = ["poc-primitives/std", "substrate-primitives/std", "substrate-client/std", "codec/std", "serde"]
